--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
+<title>Welcome to NTNU!</title>
 <style>
     body {
         width: 35em;
@@ -16,10 +16,9 @@
 </p>
 
 <p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
+<a href="https://github.com/meekrosoft/myapp.git">github.org</a>.<br/>
+Create issues on the github repository for help
 
-<p><em>Thank you for using nginx.</em></p>
+<p><em>Thank you for visiting NTNU.</em></p>
 </body>
 </html>
